# docs/openapi.json
@@ -1017,6 +1017,15 @@
       "EventRule": {
         "additionalProperties": false,
         "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/EventRule.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
           "can_delete": {
             "type": "boolean"
           },
@@ -1545,6 +1554,15 @@
       "UpdateEventRule": {
         "additionalProperties": false,
         "properties": {
+          "$schema": {
+            "description": "A URL to the JSON Schema for this object.",
+            "examples": [
+              "https://example.com/schemas/UpdateEventRule.json"
+            ],
+            "format": "uri",
+            "readOnly": true,
+            "type": "string"
+          },
           "code": {
             "type": "string"
           },
@@ -3147,6 +3165,37 @@
       }
     },
     "/api/event-rules": {
+      "delete": {
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "items": {
+                  "type": "string"
+                },
+                "type": "array"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "default": {
+            "content": {
+              "application/problem+json": {
+                "schema": {
+                  "$ref": "#/components/schemas/ErrorModel"
+                }
+              }
+            },
+            "description": "Error"
+          }
+        },
+        "summary": "Delete event rules"
+      },
       "get": {
         "responses": {
           "200": {
@@ -3193,10 +3242,7 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/EventRule"
-                  },
-                  "type": "array"
+                  "$ref": "#/components/schemas/EventRule"
                 }
               }
             },
@@ -3229,32 +3275,9 @@
             }
           }
         ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "items": {
-                  "$ref": "#/components/schemas/UpdateEventRule"
-                },
-                "type": "array"
-              }
-            }
-          },
-          "required": true
-        },
         "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "items": {
-                    "$ref": "#/components/schemas/EventRule"
-                  },
-                  "type": "array"
-                }
-              }
-            },
-            "description": "OK"
+          "204": {
+            "description": "No Content"
           },
           "default": {
             "content": {
@@ -3267,7 +3290,7 @@
             "description": "Error"
           }
         },
-        "summary": "Update event rules"
+        "summary": "Delete event rule by uuid"
       }
     },
     "/api/events": {
